# resolver

./: .gitignore  CITATION.cff  FOLLOWUPS.md  Makefile  README.md  RELEASE-NOTES-v2.1.md  RESOLVER-VALIDATION-SPEC.md  TEST-IMPROVEMENTS.md  go.mod  go.sum  test-refusal-time.sh  test-refusal.sh
.claude/: CLAUDE.md  settings.json
.github/workflows/: go.yml
.omc/handoffs/: team-exec.md  team-verify.md
.omc/plans/: classifier-matcher-foundation.md  open-questions.md  resolver-harness-v1-plan.md  resolver-v2-1-1-plan.md  resolver-v2-1-plan.md  resolver-v2-plan.md
.omc/specs/: deep-interview-classifier-matcher-foundation.md  deep-interview-resolver-agentic-harness-v1.md  deep-interview-resolver-v2-1-test-suite.md  deep-interview-resolver-v2-comparison.md
cmd/classify-replay/: main.go  replay_test.go
cmd/judge-replay/: main.go  replay_test.go
cmd/resolver/: main.go  (+3 more)
contrib/: example.cron  example.service
docs/: build.md  community-benchmarks-schema.md  manifest-schema.md
golden/: canned-responses.json  scorecard_example.json  view_columns.txt
reports/: community-benchmarks.yaml
scripts/: golden-diff-sanity.sh  report.sh  shell.sh  sweep.sh
testdata/: run-config-example.yaml
tools/analyze/: README.md  pyproject.toml
tools/analyze/notebooks/: quickstart.ipynb  reproducibility.ipynb
tools/analyze/prompts/: compare-models.md  run-benchmark.md  scrape-community-benchmarks.md
tools/analyze/src/analyze/: __init__.py  cli.py  db.py  report.py
tools/analyze/tests/: conftest.py  test_db.py  test_filesystem_boundary.py  test_normalize.py  test_notebooks.py  test_report.py  test_schema_drift.py
(+799 files in other folders)
