[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "resolver-analyze"
version = "0.1.0"
description = "Cross-run analyzer for resolver benchmark data (reads reports/resolver.duckdb, emits LLM-authored comparison reports)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "Paul Gresham", email = "paul@paulgresham.com" },
]
keywords = ["llm", "benchmark", "evaluation", "agentic", "tool-use"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "duckdb>=1.0,<2.0",
  "polars>=0.20,<2.0",
  "pyyaml>=6.0,<7.0",
  "openai>=1.40,<2.0",
  "jinja2>=3.1,<4.0",
  "typer>=0.12,<1.0",
  "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
notebook = [
  "jupyter>=1.0",
  "notebook>=7.0",
  "ipykernel>=6.29",
  "matplotlib>=3.8",
  "pandas>=2.0",
]
test = [
  "pytest>=8.0",
  "pytest-mock>=3.12",
  "respx>=0.21",   # httpx mock transport
  "nbformat>=5.9", # test_notebooks.py parses committed .ipynb files
]

[project.scripts]
analyze = "analyze.cli:app"

[project.urls]
Homepage = "https://github.com/wentbackward/resolver"
Repository = "https://github.com/wentbackward/resolver"

[tool.hatch.build.targets.wheel]
packages = ["src/analyze"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
